# Version016

./: dump.rdb  requirements_all.txt  to-uninstall.txt
MainProject/: .gitignore  Procfile  appscript-1.2.2-cp311-cp311-macosx_10_9_universal2.whl  build.sh  dump.rdb  dump.sql  elasticsearch_viewer.py  import_requirements.py  pyproject.toml  requirements.txt
MainProject/apps/ContactUs/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MainProject/apps/ContactUs/migrations/: 0001_initial.py
MainProject/apps/Search/: apps.py  documents.py  forms.py  models.py  urls.py  views.py
MainProject/apps/Search/management/commands/: check_elasticsearch.py
MainProject/apps/Search/migrations/: 0001_initial.py
MainProject/apps/StripePayment/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
MainProject/apps/StripePayment/management/commands/: import_products.py
MainProject/apps/StripePayment/migrations/: 0001_initial.py  0002_alter_subscription_completed_and_more.py  0002_product_file_product_url.py  0003_alter_product_url.py  0003_alter_subscription_subscription_plan_id.py  0004_remove_product_url.py  0005_remove_product_file.py  0006_alter_price_price.py  0007_donation.py  0008_donation_stripe_checkout_session_id_and_more.py  0009_remove_donation_donation_type_and_more.py  0010_subscription_is_active_and_more.py  0011_donation_checkout_status_donation_completed_and_more.py  0012_subscription_product.py  0013_donation_stripe_customer_id_and_more.py
MainProject/apps/SubjectTags/: apps.py  urls.py  views.py
MainProject/apps/URLsub/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MainProject/apps/URLsub/migrations/: 0003_remove_urlsub_url_urlsub_url.py  0004_remove_urlsub_tags_remove_urlsub_url_urlsub_tags_and_more.py  0005_alter_urlsub_options.py  0006_alter_urlsub_options_rename_username_urlsub_user_and_more.py  0007_alter_urlsub_tags.py  0008_alter_urlsub_tags_alter_urlsub_url_and_more.py  0009_alter_urlsub_unique_together.py  0010_remove_urlsub_recommendations_count.py  0011_urlsub_title.py  0012_alter_urlsub_title.py  0013_urlsub_slug.py  0014_tag_description.py  0015_alter_description_options.py  0016_alter_description_options_description_timestamp.py  0017_alter_description_unique_together.py
MainProject/apps/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
MainProject/apps/core/management/commands/: check_db_connection.py
MainProject/apps/core/migrations/: 0001_initial.py  0002_comment.py  0002_post_urlsub.py  0002_remove_comment_name.py  0003_news.py  0003_userpostinteraction.py  0004_delete_news.py  0004_delete_userpostinteraction.py  0005_alter_blogfullrecommend_tags_alter_post_tags.py  0005_contact.py  0006_alter_blogfullrecommend_image_alter_post_image.py  0006_delete_contact.py  0007_blogfullrecommend.py  0008_comment_username.py  0009_rename_author_post_username.py  0010_alter_blogfullrecommend_options_and_more.py  0011_rename_username_comment_author_and_more.py  0012_remove_tag_name_tag_tags.py
MainProject/apps/legal/: urls.py  views.py
MainProject/apps/users/: admin.py  apps.py  forms.py  models.py  signup.py  urls.py  views.py
MainProject/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_profile_avatar_profile_interests_and_more.py  0004_remove_profile_personal_description.py  0005_rename_image_profile_banner.py  0006_alter_profile_banner.py  0007_profile_timezone.py  0008_alter_profile_timezone.py  0009_user_stripe_customer_id.py
MainProject/apps/users/tests/: tests_views.py
MainProject/blog/: celery.py  development_settings.py  production_settings.py  settings.py  urls.py  wsgi.py
MainProject/docs/: conf.py  index.rst
MainProject/docs/_build/doctrees/: environment.pickle  index.doctree
MainProject/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
MainProject/docs/_build/html/_sources/: index.rst.txt
MainProject/myproject.egg-info/: SOURCES.txt  top_level.txt
MainProject/scraping/: celery.py
MainProject/scraping/migrations/: 0003_delete_news.py
MainProject/static/css/: donate.css  home.css  index.css  index_20240215.css  index_20240305.css
MainProject/static/css/URLsub/: urlsub_detail.css
MainProject/static/css/core/: discussion.css
MainProject/static_collected/: home.css  index_20240305.css
MainProject/static_collected/URLsub/: urlsub_detail.css
MainProject/static_collected/assets/plugins/input-tags/: tagsinput.css
MainProject/static_collected/core/: home.css
MainProject/static_collected/css/: donate.css  home.css  index.css  index_20240305.css
MainProject/static_collected/css/URLsub/: urlsub_detail.css
MainProject/tempfiles/: requirements.txt  requirements_20230923.txt  requirements_blah.txt  requirements_trunc.txt
MainProject/templates/: base.html
MainProject/templates/ContactUs/: contact.html  success.html
MainProject/templates/Search/: elastic_search_results.html  search_history.html  search_results.html
MainProject/templates/StripePayment/: cancel.html  combined.html  donate.html  donation.html  donation_success.html  error.html  landing.html  manage_subscription.html  subscription.html  subscription_cancel.html  subscription_cancelled.html  subscription_list.html  subscription_success.html  success.html
MainProject/templates/SubjectTags/: blogs_list_by_tag.html  post_list_by_tag.html
MainProject/templates/URLsub/: add_additional_description.html  thanks_url.html  urlsub.html  urlsub_detail.html
MainProject/templates/core/: about.html  discussion.html  forum.html  forum_post.html  home.html  home_test.html  liked.html  post.html  post_form.html  recommendations.html  rsstest.html  savedforlater.html  submit_url.html  subscriptions.html  trending.html  url_specific_post.html  url_specific_post_create.html  yourposts.html
MainProject/templates/legal/: privacy_policy.html  terms_of_service.html
MainProject/templates/users/: edit_profile.html  login.html  password_reset_subject.txt  profile.html  profile_form.html  signup.html
(+22 files in other folders)
