[tool.poetry]
name = "jidder"
version = "0.1.0"
description = "Blog aggregator and social media site"
authors = ["AmandaMuehlbauer <amuehlbauer038@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alabaster = "0.7.13"
amqp = "5.1.1"
anyio = "4.0.0"
apeye = "1.4.1"
apeye-core = "1.1.4"
appdirs = "1.4.4"
appnope = "0.1.3"
appscript = "1.2.2"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.2.3"
asgiref = "3.7.2"
astroid = "2.15.7"
asttokens = "2.4.0"
async-lru = "2.0.4"
attrs = "23.1.0"
automat = "22.10.0"
babel = "2.12.1"
backcall = "0.2.0"
beautifulsoup4 = "4.12.2"
billiard = "4.1.0"
black = "23.9.1"
bleach = "6.0.0"
blinker = "1.6.2"
bokeh = "3.2.2"
cachetools = "5.3.1"
celery = "5.3.4"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
cloudpickle = "2.2.1"
colorcet = "3.0.1"
comm = "0.1.4"
constantly = "15.1.0"
crc32c = "2.3.post0"
cron-descriptor = "1.4.0"
cryptography = "41.0.4"
cssselect = "1.2.0"
cycler = "0.11.0"
dask = "2023.9.2"
debugpy = "1.8.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
diff-match-patch = "20230430"
dill = "0.3.7"
distlib = "0.3.7"
django = "4.2.5"
django-celery-beat = "2.5.0"
django-celery-results = "2.5.1"
django-crispy-forms = "2.0"
django-debug-toolbar = "4.2.0"
django-elasticsearch = "7.0.2"
django-elasticsearch-dsl = "7.3"
django-googlesearch = "0.2"
django-taggit = "4.0.0"
django-timezone-field = "6.0.1"
django-widget-tweaks = "1.5.0"
docopt = "0.6.2"
docstring-to-markdown = "0.12"
docutils = "0.20.1"
domdf-python-tools = "3.6.1"
elastic-transport = "8.4.0"
elasticsearch = "7.17.9"
elasticsearch-dsl = "7.4.1"
entrypoints = "0.4"
exceptiongroup = "1.1.3"
executing = "1.2.0"
fastjsonschema = "2.18.0"
filelock = "3.12.4"
flake8 = "6.1.0"
fonttools = "4.42.1"
fqdn = "1.5.1"
frozenlist = "1.4.0"
fsspec = "2023.9.2"
future = "0.18.3"
gensim = "4.3.2"
glob2 = "0.7"
gmpy2 = "2.1.5"
google-api-core = "2.11.1"
google-api-python-client = "2.100.0"
google-auth = "2.23.0"
google-auth-httplib2 = "0.1.1"
google-cloud-core = "2.3.3"
google-cloud-storage = "2.11.0"
google-crc32c = "1.5.0"
google-resumable-media = "2.6.0"
google-search = "1.1.1"
googleapis-common-protos = "1.60.0"
greenlet = "2.0.2"
grpcio = "1.58.0"
h11 = "0.14.0"
h5py = "3.9.0"
heapdict = "1.0.1"
holoviews = "1.17.1"
httplib2 = "0.22.0"
hvplot = "0.8.4"
hyperlink = "21.0.0"
idna = "3.4"
imagecodecs = "2023.9.18"
imageio = "2.31.3"
imagesize = "1.4.1"
importlib-metadata = "6.8.0"
incremental = "22.10.0"
inflection = "0.5.1"
iniconfig = "2.0.0"
intake = "0.7.0"
intervaltree = "3.1.0"
ipython = "8.15.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.1"
isoduration = "20.11.0"
isort = "5.12.0"
itemadapter = "0.8.0"
itemloaders = "1.1.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.3.0"
jdcal = "1.4.1"
jedi = "0.19.0"
jinja2 = "3.1.2"
jinja2-time = "0.2.0"
jmespath = "1.0.1"
joblib = "1.3.2"
json5 = "0.9.14"
jsonpointer = "2.4"
jsonschema = "4.19.1"
jsonschema-specifications = "2023.7.1"
keyring = "24.2.0"
kiwisolver = "1.4.5"
kombu = "5.3.2"
lazy-object-proxy = "1.9.0"
libarchive-c = "5.0"
linkify-it-py = "2.0.2"
llvmlite = "0.41.0"
locket = "1.0.0"
lxml = "4.9.3"
markdown = "3.4.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.3"
matplotlib = "3.8.0"
matplotlib-inline = "0.1.6"
mccabe = "0.7.0"
mdit-py-plugins = "0.4.0"
mdurl = "0.1.2"
mistune = "3.0.1"
more-itertools = "10.1.0"
mpmath = "1.3.0"
msgpack = "1.0.6"
multidict = "6.0.4"
multipledispatch = "1.0.0"
munkres = "1.1.4"
mypy-extensions = "1.0.0"
natsort = "8.4.0"
nbformat = "5.9.2"
nest-asyncio = "1.5.8"
newsapi-python = "0.2.7"
nltk = "3.8.1"
nose = "1.3.7"
numba = "0.58.0"
numexpr = "2.8.6"
numpy = "1.25.2"
numpydoc = "1.5.0"
outcome = "1.2.0"
overrides = "7.4.0"
packaging = "23.1"
pandocfilters = "1.5.0"
panel = "1.2.3"
param = "1.13.0"
parsel = "1.8.1"
parso = "0.8.3"
partd = "1.4.0"
pathspec = "0.11.2"
patsy = "0.5.3"
pep8 = "1.7.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pillow = "10.0.1"
pipdeptree = "2.13.0"
pipenv = "2023.9.8"
pipreqs = "0.4.13"
pkginfo = "1.9.6"
platformdirs = "3.10.0"
plotly = "5.17.0"
pluggy = "1.3.0"
ply = "3.11"
poyo = "0.5.0"
prometheus-client = "0.17.1"
prompt-toolkit = "3.0.39"
protego = "0.3.0"
protobuf = "4.24.3"
psutil = "5.9.5"
psycopg2 = "2.9.7"
psycopg2-binary = "2.9.7"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pyasn1 = "0.5.0"
pyasn1-modules = "0.3.0"
pycodestyle = "2.11.0"
pycparser = "2.21"
pyct = "0.5.0"
pycurl = "7.45.2"
pydispatcher = "2.0.7"
pydocstyle = "6.3.0"
pyerfa = "2.0.0.3"
pyflakes = "3.1.0"
pygments = "2.16.1"
pyhamcrest = "2.0.4"
pyjwt = "2.8.0"
pylint = "2.17.5"
pyodbc = "4.0.39"
pyopenssl = "23.2.0"
pyparsing = "3.1.1"
pypi-json = "0.4.0"
pyrsistent = "0.19.3"
pysocks = "1.7.1"
pytest = "7.4.2"
python-crontab = "3.0.0"
python-dateutil = "2.8.2"
python-decouple = "3.8"
python-json-logger = "2.0.7"
python-lsp-black = "1.3.0"
python-lsp-jsonrpc = "1.1.2"
python-lsp-server = "1.8.0"
python-slugify = "8.0.1"
pytoolconfig = "1.2.5"
pytz = "2023.3.post1"
pyviz-comms = "3.0.0"
pywavelets = "1.4.1"
pyyaml = "6.0.1"
pyzmq = "25.1.1"
qdarkstyle = "3.1"
qstylizer = "0.2.2"
qtawesome = "1.2.3"
qtpy = "2.4.0"
queuelib = "1.6.2"
redis = "5.0.0"
referencing = "0.30.2"
regex = "2023.8.8"
requests = "2.31.0"
requests-file = "1.5.1"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rope = "1.9.0"
rpds-py = "0.10.3"
rsa = "4.9"
rtree = "1.0.1"
scikit-learn = "1.3.1"
scrapy = "2.11.0"
selenium = "4.12.0"
send2trash = "1.8.2"
service-identity = "23.1.0"
sip = "6.7.11"
six = "1.16.0"
smart-open = "6.4.0"
sniffio = "1.3.0"
snowballstemmer = "2.2.0"
sortedcollections = "2.1.0"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sphinx = "7.2.6"
sphinxcontrib-applehelp = "1.0.7"
sphinxcontrib-devhelp = "1.0.5"
sphinxcontrib-htmlhelp = "2.0.4"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.6"
sphinxcontrib-serializinghtml = "1.1.9"
sqlalchemy = "2.0.21"
sqlparse = "0.4.4"
stack-data = "0.6.2"
statsmodels = "0.14.0"
sympy = "1.12"
tabulate = "0.9.0"
tblib = "2.0.0"
tenacity = "8.2.3"
terminado = "0.17.1"
testpath = "0.6.0"
text-unidecode = "1.3"
textdistance = "4.5.0"
threadpoolctl = "3.2.0"
three-merge = "0.1.1"
tifffile = "2023.9.18"
tinycss = "0.4"
tinycss2 = "1.2.1"
tldextract = "3.6.0"
toml = "0.10.2"
tomli = "2.0.1"
tomlkit = "0.12.1"
toolz = "0.12.0"
tornado = "6.3.3"
tqdm = "4.66.1"
traitlets = "5.10.0"
trio = "0.22.2"
trio-websocket = "0.10.4"
twisted = "22.10.0"
typed-ast = "1.5.5"
typesense = "0.17.0"
typing-extensions = "4.8.0"
tzdata = "2023.3"
uc-micro-py = "1.0.2"
ujson = "5.8.0"
unicode = "2.9"
unidecode = "1.3.6"
uri-template = "1.3.0"
uritemplate = "4.1.1"
urllib3 = "1.26.16"
vine = "5.0.0"
virtualenv = "20.24.5"
virtualenv-clone = "0.5.7"
voluptuous = "0.13.1"
w3lib = "2.1.2"
watchdog = "3.0.0"
wcwidth = "0.2.6"
webcolors = "1.13"
webencodings = "0.5.1"
websocket-client = "1.6.3"
werkzeug = "2.3.7"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
widgetsnbextension = "4.0.9"
wrapt = "1.15.0"
wsproto = "1.2.0"
wurlitzer = "3.0.3"
xarray = "2023.8.0"
xlrd = "2.0.1"
xlsxwriter = "3.1.4"
xlwings = "0.30.12"
xyzservices = "2023.7.0"
yapf = "0.40.2"
yarg = "0.1.9"
yarl = "1.9.2"
zict = "3.0.0"
zipp = "3.17.0"
zope-interface = "6.0"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
